--- a/index.html
+++ b/index.html
@@ -3324,7 +3324,7 @@ flexibility(document.documentElement);
 									<div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-button-1"
 										data-section="section-hb-button-1">
 										<div class="ast-builder-button-wrap ast-builder-button-size-">
-											<a class="ast-custom-button-link" href="#" target="_self">
+											<a class="ast-custom-button-link" href="./contact-3/index.html" target="_self">
 												<div class="ast-custom-button">Hire Me</div>
 											</a><a class="menu-link" href="./contact-3/index.html" target="_self">Hire Me</a>
 										</div>
@@ -3753,7 +3753,7 @@ flexibility(document.documentElement);
 														data-widget_type="button.default">
 														<div class="elementor-widget-container">
 															<div class="elementor-button-wrapper">
-																<a href="#"
+																<a href="./contact-3/index.html"
 																	class="elementor-button-link elementor-button elementor-size-sm"
 																	role="button">
 																	<span class="elementor-button-content-wrapper">
