--- a/about-2/index.html
+++ b/about-2/index.html
@@ -290,7 +290,7 @@ flexibility(document.documentElement);
 						<span class="elementor-button-content-wrapper">
 							<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fas fa-file-download"></i>			</span>
-						<span class="elementor-button-text">Download CV</span>
+						<span class="elementor-button-text"><a href="Kishan Salvi Resume[tech].pdf" download>Download CV</a></span>
 		</span>
 					</a>
 		</div>
