--- a/about-2/index.html
+++ b/about-2/index.html
@@ -283,6 +283,13 @@ flexibility(document.documentElement);
 							<p>Download my CV from here and let me know if I can provide value to your organization or to you.</p>
 <p> </p>						</div>
 				</div>
+				<div class="elementor-element elementor-element-4c87a5f elementor-widget elementor-widget-button" data-id="4c87a5f" data-element_type="widget" data-widget_type="button.default">
+				<div class="elementor-widget-container">
+					<div class="elementor-button-wrapper">
+			<a class="elementor-button elementor-size-sm" role="button">
+						<span class="elementor-button-content-wrapper">
+							<span class="elementor-button-icon elementor-align-icon-left">
+				<i aria-hidden="true" class="fas fa-file-download"></i>			</span>
 				
 						<span class="elementor-button-text"><a href="Kishan Salvi Resume[tech].pdf" download>Download CV</a></span>
 		</span>
