--- a/index.html
+++ b/index.html
@@ -4048,8 +4048,8 @@ flexibility(document.documentElement);
 								<div class="ast-footer-social-1-wrap ast-footer-social-wrap">
 									<div
 										class="footer-social-inner-wrap element-social-inner-wrap social-show-label-false ast-social-color-type-custom ast-social-stack-none ast-social-element-style-filled">
-										<a href="https://www.facebook.com/kisshh.slv.1/" aria-label="Facebook"
-											target="_blank" rel="noopener noreferrer"
+										<a href="#" aria-label="Facebook"
+											 rel="noopener noreferrer"
 											style="--color: #557dbc; --background-color: transparent;"
 											class="ast-builder-social-element ast-inline-flex ast-facebook footer-social-item"><span
 												class="ahfb-svg-iconset ast-inline-flex svg-baseline"><svg
@@ -4057,8 +4057,8 @@ flexibility(document.documentElement);
 													<path
 														d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z">
 													</path>
-												</svg></span></a><a href="https://www.instagram.com/kishh_14/"
-											aria-label="Instagram" target="_blank" rel="noopener noreferrer"
+												</svg></span></a><a href="#"
+											aria-label="Instagram" rel="noopener noreferrer"
 											style="--color: #8a3ab9; --background-color: transparent;"
 											class="ast-builder-social-element ast-inline-flex ast-instagram footer-social-item"><span
 												class="ahfb-svg-iconset ast-inline-flex svg-baseline"><svg
